Wed Jan 10 09:57:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compression/server.cpp:
          Extended this test further

Wed Jan 10 09:13:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/Bug_2350_Regression.idl:
          Added missing id tag

Wed Jan 10 02:02:00 UTC 2007  Chris Cleeland  <cleeland_c@ociweb.com>

        * orbsvcs/tests/Notify/Basic/run_test.pl:
        * orbsvcs/tests/Notify/Basic/run_test_ipv6.pl:

          Modified these test files to only run the tests with the
          "-UseSeparateDispatchingOrb 1" option with the notify.mt.conf
          configuration.  Currently, only the MultiTypes test fails, but
          the opportunity exists for others to fail.  The MultiTypes test
          fails because in the reactive and the rt case, a separate ORB is
          used to dispatch, but only one thread is running.  Therefore,
          when the dispatch is made and the consumer invokes "disconnect*"
          back on there, the non-dispatching (or "main") ORB isn't running
          in order to handle the request.  When the same ORB is used for
          administration and dispatching, the ORB can handle the
          disconnect call b/c of nested upcalls.  Therefore, we simply
          disallow using a separate dispatching ORB when not using using
          separate dispatching threads.

        * orbsvcs/tests/Notify/Basic:
        * orbsvcs/tests/Notify/Blocking:
        * orbsvcs/tests/Notify/Destroy:
        * orbsvcs/tests/Notify/Discarding:
        * orbsvcs/tests/Notify/Driver:
        * orbsvcs/tests/Notify/MT_Dispatching:
        * orbsvcs/tests/Notify/Ordering:
        * orbsvcs/tests/Notify/Reconnecting:
        * orbsvcs/tests/Notify/Sequence_Multi_ETCL_Filter:
        * orbsvcs/tests/Notify/Sequence_Multi_Filter:
        * orbsvcs/tests/Notify/Structured_Filter:
        * orbsvcs/tests/Notify/Structured_Multi_Filter:
        * orbsvcs/tests/Notify/performance-tests/Filter: