@@ -1,3 +1,14 @@
+Wed Jan 10 12:30:00 UTC 2007  Simon Massey  <sma@prismtech.com>
+
+        * examples/mfc/server.cpp:
+        * utils/NamingViewer/NamingViewer.cpp:
+
+          From MFC 5.0, Enable3dControls and Enable3dControlsStatic are
+          obsolete because their functionality is incorporated into
+          Microsoft's 32-bit operating systems directly. Basically there
+          is no need to call with VC5.0 and above so I've commented
+          them out to stop the build issuing deprecated warnings.
+
 Wed Jan 10 09:57:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Compression/server.cpp:
